<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BatCall</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="title_activity_nearby_places">Nearby Places</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="settings_header_title">Settings</string>
    <string name="settings_preference_category_key">settings_preference_category</string>
    <string name="settings_text_checkbox_title">Text message fallback</string>
    <string name="settings_text_checkbox_summary">
        If a selected recipient doesn\'t have this app installed, send the 
        notification as a standard text message instead.
    </string>
    <string name="text_message_fallback_prompt">
        If a selected recipient doesn\'t have this app installed, send the 
        notification as a standard text message instead? (You can change this
        option from the Settings menu at any time.)
    </string>
    <string name="settings_text_checkbox_key">settings_text_message_checkbox</string>
    <string name="settings_num_recent_contacts_key">number_of_recent_contacts</string>
    <string name="settings_num_recent_contacts_title">Number of recent contacts displayed</string>
    <string name="settings_delete_account_key">settings_delete_account_button</string>
    <string name="settings_delete_account_title">Delete Account</string>
    <string name="settings_delete_account_summary">
        This will remove your BatCall account, but will not delete your Google Account.
    </string>
    
    <string name="retry_button_text">Retry</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="out_of_date_message">
        It looks like your system is out of date. Please install any pending system updates 
        and relaunch BatCall.
    </string>
    
    <string name="default_nearby_list_item_name">Place Name</string>
    <string name="default_current_address">Current Address</string>
    <string name="powered_by_google">Powered by Google</string>
    
    <string name="duration_dialog_prompt">How long will you be here?</string>
    <string name="duration_dialog_confirm_text">Send to..</string>
    <string name="duration_dialog_hour_text">hours</string>
    <string name="duration_dialog_minute_text">minutes</string>
    
    <string name="default_image_description">ImageView</string>
    <string name="default_contact_list_item_name">Contact Name</string>
    <string name="default_contact_list_item_subheading">Send as text message</string>
    <string name="default_contact_list_header">Contacts</string>
    <string name="activity_contacts_send_button_text">Send&#8230;</string>
    
    <string name="confirmation_dialog_confirm_text">Send</string>
    
    <string name="delete_account_confirm_title">Delete account?</string>
    <string name="delete_account_confirm_button_text">Delete</string>
    
    <string name="notification_response_failure_prompt">
        Could not send notification to the following recipients. 
        To send as text message, please enable text message fallback in the Settings menu.
    </string>
    <string name="notification_response_sent">BatCall notification sent!</string>
    <string name="sms_response_success">Text messages sent!</string>
    <string name="sms_response_failure">Unable to send text message</string>
    
    
   

</resources>