<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp" >

    <ImageView
        android:id="@+id/contact_list_item_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/default_image_description"
        android:src="@drawable/emo_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/contact_list_item_image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:text="@string/default_contact_list_item_name" />
        
        <TextView android:id="@+id/contact_list_item_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp"
            android:textStyle="italic"
            android:text="@string/default_contact_list_item_subheading" />
        
    </LinearLayout>

    <CheckBox
        android:id="@+id/contact_list_item_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:checked="false" />

</RelativeLayout>